--- a/index.html
+++ b/index.html
@@ -18,9 +18,8 @@
   <body
     class="font-[Montserrat] bg-fixed"
     style="
-      background-image: url(ahttps://s3-alpha-sig.figma.com/img/12b0/e7ec/8a82534e4e5792cde199c61c7f676811?Expires=1698624000&Signature=X4JsoZw3Arm2IIXG0WbqEde9Iujt~NtlVw4ue82x5PqBo-fuFAv4Kc1RqedmjdX9LYZTMF9bY0T06GrJ8gEMFuUhk2Kh96zQJgAOAVuWMbyfSzT6~-CrMsH7JNw8FG3WcT3CD~pq3PcCqrc4awOj2Gi~Z21uIrUDdlnBo9i1w3Lag54GcMuWAQUliDZQ-dvkFe82rnHa262WwQQ9PtaySz~rbVwMkvj2aKo8RzIj0XBvxpANyeAx3cKj6XbYmwYF5JxOx9apQ9Ej5cC5DdzyhpKZ9nrdGxZUTvNkVaNtzpVJMwm2kgCIZWxgFuXqjT6XAyOyKn5HIPHd-mRNf5Tdbg__&Key-Pair-Id=APKAQ4GOSFWCVNEHN3O4);
-    "
-  >
+      background-image: url(https://s3-alpha-sig.figma.com/img/12b0/e7ec/8a82534e4e5792cde199c61c7f676811?Expires=1698624000&Signature=X4JsoZw3Arm2IIXG0WbqEde9Iujt~NtlVw4ue82x5PqBo-fuFAv4Kc1RqedmjdX9LYZTMF9bY0T06GrJ8gEMFuUhk2Kh96zQJgAOAVuWMbyfSzT6~-CrMsH7JNw8FG3WcT3CD~pq3PcCqrc4awOj2Gi~Z21uIrUDdlnBo9i1w3Lag54GcMuWAQUliDZQ-dvkFe82rnHa262WwQQ9PtaySz~rbVwMkvj2aKo8RzIj0XBvxpANyeAx3cKj6XbYmwYF5JxOx9apQ9Ej5cC5DdzyhpKZ9nrdGxZUTvNkVaNtzpVJMwm2kgCIZWxgFuXqjT6XAyOyKn5HIPHd-mRNf5Tdbg__&Key-Pair-Id=APKAQ4GOSFWCVNEHN3O4);
+    ">
     <header class="bg-gradient-to-b from-[#000] to-transparent h-40">
       <nav class="flex justify-between items-center w-[92%]">
         <div>
@@ -47,18 +46,18 @@
     </header>
 
     <div class="container absolute bottom-[10%] ml-[8%]">
-      <p class="italic font-[500] text-4xl">
+      <p class="italic font-[500] text-4xl text-white">
         The <span class="text-[#F09517] font-[700]">magic</span> can happen
       </p>
       <div class="mb-4">
-        <p class="italic font-[500] text-4xl">
+        <p class="italic font-[500] text-4xl text-white">
           in <span class="text-[#F09517] font-[700]">studio.</span>
         </p>
       </div>
-      <p class="italic font-[500] text-4xl">
+      <p class="italic font-[500] text-4xl text-white">
         <span class="text-[#F09517] font-[700]">Special things</span> can happen
       </p>
-      <p class="italic font-[500] text-4xl">
+      <p class="italic font-[500] text-4xl text-white">
         in a <span class="text-[#F09517] font-[700]">recording studio.</span>
       </p>
     </div>
