-section 1 belum sama design -image float udah

--- a/index.html
+++ b/index.html
@@ -35,10 +35,10 @@
               <a class="text-[#F09517] font-bold" href="#">HOME</a>
             </li>
             <li>
-              <a class="text-[#F09517]" href="#">ABOUT</a>
+              <a class="text-[#F09517]" href="about.html">ABOUT</a>
             </li>
             <li>
-              <a class="text-[#F09517]" href="#">SERVICES</a>
+              <a class="text-[#F09517]" href="services.html">SERVICES</a>
             </li>
           </ul>
         </div>
