--- a/index.html
+++ b/index.html
@@ -63,7 +63,9 @@
     </div>
 
     <div class="w-28 h-28 bg-[#F09517] rounded-full absolute bottom-[8%] right-[5%] flex items-center justify-center">
+      <a href= "https://api.whatsapp.com/send?phone=085220675360">
       <img class=" w-16 h-16" src="assets/images/whatsapp.png" alt="whatsapp">
+      </a>
     </div>
   </body>
 </html>
