add: services.html page

--- a/about.html
+++ b/about.html
@@ -29,7 +29,7 @@
             <a class="text-[#F09517] font-bold" href="#">ABOUT</a>
           </li>
           <li>
-            <a class="text-[#F09517]" href="#">SERVICES</a>
+            <a class="text-[#F09517]" href="services.html">SERVICES</a>
           </li>
         </ul>
       </div>
