add: dot bellow page nav bg-color change to #151515

--- a/about.html
+++ b/about.html
@@ -14,7 +14,7 @@
   <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@400;500;900&display=swap" rel="stylesheet" />
 </head>
 
-<body class="font-[Montserrat] bg-black">
+<body class="font-[Montserrat] bg-[#151515]">
   <header class="bg-gradient-to-b from-[#000] to-transparent h-40">
     <nav class="flex justify-between items-center w-[92%]">
       <div>
@@ -24,19 +24,28 @@
         <ul class="flex items-end gap-[7vw]">
           <li>
             <a class="text-[#F09517]" href="index.html">HOME</a>
+            <div class="flex justify-center items-center">
+              <div class="w-[8px] h-[8px] rounded-[50%]"></div>
+            </div>
           </li>
           <li>
             <a class="text-[#F09517] font-bold" href="#">ABOUT</a>
+            <div class="flex justify-center items-center">
+              <div class="w-[8px] h-[8px] rounded-[50%] bg-[#F09517]"></div>
+          </div>
           </li>
           <li>
             <a class="text-[#F09517]" href="services.html">SERVICES</a>
+            <div class="flex justify-center items-center">
+              <div class="w-[8px] h-[8px] rounded-[50%]"></div>
+            </div>
           </li>
         </ul>
       </div>
     </nav>
   </header>
   <!-- section 1, black bg -->
-  <div class="bg-black h-[693px]">
+  <div class="bg-[#151515] h-[693px]">
     <div class="pt-[411px]">
       <h1 class="text-[#F09517] text-8xl font-bold  ml-40">Inspira</h1>
       <p class="text-[#F09517] text-5xl ml-40">Music Studio</p>
@@ -90,7 +99,7 @@
       </div>
     </div>
 
-    <div class="bg-black h-[500px]"></div>
+    <div class="bg-[#151515] h-[500px]"></div>
   </div>
 </body>
 
