--- a/services.html
+++ b/services.html
@@ -14,7 +14,7 @@
     <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@400;500;900&display=swap" rel="stylesheet" />
 </head>
 
-<body class="font-[Montserrat] bg-black">
+<body class="font-[Montserrat] bg-[#151515]">
     <header class="bg-gradient-to-b from-[#000] to-transparent h-40">
         <nav class="flex justify-between items-center w-[92%]">
             <div>
@@ -24,12 +24,21 @@
                 <ul class="flex items-end gap-[7vw]">
                     <li>
                         <a class="text-[#F09517]" href="index.html">HOME</a>
+                        <div class="flex justify-center items-center">
+                            <div class="w-[8px] h-[8px] rounded-[50%]"></div>
+                        </div>
                     </li>
                     <li>
                         <a class="text-[#F09517]" href="about.html">ABOUT</a>
+                        <div class="flex justify-center items-center">
+                            <div class="w-[8px] h-[8px] rounded-[50%]"></div>
+                        </div>
                     </li>
                     <li>
                         <a class="text-[#F09517] font-bold" href="services.html">SERVICES</a>
+                        <div class="flex justify-center items-center">
+                            <div class="w-[8px] h-[8px] rounded-[50%] bg-[#F09517]"></div>
+                        </div>
                     </li>
                 </ul>
             </div>
