--- a/index.html
+++ b/index.html
@@ -1,71 +1,74 @@
 <!DOCTYPE html>
 <html lang="en">
-  <head>
-    <meta charset="UTF-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <script src="https://cdn.tailwindcss.com"></script>
-    <title>Inspira Music Studio</title>
-    <link rel="stylesheet" href="styles.css" />
 
-    <!-- Fonts -->
-    <link rel="preconnect" href="https://fonts.googleapis.com" />
-    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
-    <link
-      href="https://fonts.googleapis.com/css2?family=Montserrat:wght@400;500;900&display=swap"
-      rel="stylesheet"
-    />
-  </head>
-  <body
-    class="font-[Montserrat] bg-fixed"
-    style="
+<head>
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <script src="https://cdn.tailwindcss.com"></script>
+  <title>Inspira Music Studio</title>
+  <link rel="stylesheet" href="styles.css" />
+
+  <!-- Fonts -->
+  <link rel="preconnect" href="https://fonts.googleapis.com" />
+  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+  <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@400;500;900&display=swap" rel="stylesheet" />
+</head>
+
+<body class="font-[Montserrat] bg-fixed" style="
       background-image: url(https://s3-alpha-sig.figma.com/img/12b0/e7ec/8a82534e4e5792cde199c61c7f676811?Expires=1698624000&Signature=X4JsoZw3Arm2IIXG0WbqEde9Iujt~NtlVw4ue82x5PqBo-fuFAv4Kc1RqedmjdX9LYZTMF9bY0T06GrJ8gEMFuUhk2Kh96zQJgAOAVuWMbyfSzT6~-CrMsH7JNw8FG3WcT3CD~pq3PcCqrc4awOj2Gi~Z21uIrUDdlnBo9i1w3Lag54GcMuWAQUliDZQ-dvkFe82rnHa262WwQQ9PtaySz~rbVwMkvj2aKo8RzIj0XBvxpANyeAx3cKj6XbYmwYF5JxOx9apQ9Ej5cC5DdzyhpKZ9nrdGxZUTvNkVaNtzpVJMwm2kgCIZWxgFuXqjT6XAyOyKn5HIPHd-mRNf5Tdbg__&Key-Pair-Id=APKAQ4GOSFWCVNEHN3O4);
     ">
-    <header class="bg-gradient-to-b from-[#000] to-transparent h-40">
-      <nav class="flex justify-between items-center w-[92%]">
-        <div>
-          <img
-            class="py-8 px-10 ml-4"
-            src="assets/images/logo.png"
-            alt="Logo"
-          />
-        </div>
-        <div class="">
-          <ul class="flex items-end gap-[7vw]">
-            <li>
-              <a class="text-[#F09517] font-bold" href="#">HOME</a>
-            </li>
-            <li>
-              <a class="text-[#F09517]" href="about.html">ABOUT</a>
-            </li>
-            <li>
-              <a class="text-[#F09517]" href="services.html">SERVICES</a>
-            </li>
-          </ul>
-        </div>
-      </nav>
-    </header>
-
-    <div class="container absolute bottom-[10%] ml-[8%]">
-      <p class="italic font-[500] text-4xl text-white">
-        The <span class="text-[#F09517] font-[700]">magic</span> can happen
-      </p>
-      <div class="mb-4">
-        <p class="italic font-[500] text-4xl text-white">
-          in <span class="text-[#F09517] font-[700]">studio.</span>
-        </p>
+  <header class="bg-gradient-to-b from-[#000] to-transparent h-40">
+    <nav class="flex justify-between items-center w-[92%]">
+      <div>
+        <img class="py-8 px-10 ml-4" src="assets/images/logo.png" alt="Logo" />
       </div>
-      <p class="italic font-[500] text-4xl text-white">
-        <span class="text-[#F09517] font-[700]">Special things</span> can happen
-      </p>
-      <p class="italic font-[500] text-4xl text-white">
-        in a <span class="text-[#F09517] font-[700]">recording studio.</span>
-      </p>
-    </div>
+      <div class="">
+        <ul class="flex items-end gap-[7vw]">
+          <li>
+            <a class="text-[#F09517] font-bold" href="#">HOME</a>
+            <div class="flex justify-center items-center">
+              <div class="w-[8px] h-[8px] rounded-[50%] bg-[#F09517]"></div>
+            </div>
+          </li>
+          <li>
+            <a class="text-[#F09517]" href="about.html">ABOUT</a>
+            <div class="flex justify-center items-center">
+              <div class="w-[8px] h-[8px] rounded-[50%]"></div>
+            </div>
+          </li>
+          <li>
+            <a class="text-[#F09517]" href="services.html">SERVICES</a>
+            <div class="flex justify-center items-center">
+              <div class="w-[8px] h-[8px] rounded-[50%]"></div>
+            </div>
+          </li>
+        </ul>
+      </div>
+    </nav>
+  </header>
 
-    <div class="w-28 h-28 bg-[#F09517] rounded-full absolute bottom-[8%] right-[5%] flex items-center justify-center">
-      <a href= "https://api.whatsapp.com/send?phone=085220675360">
-      <img class=" w-16 h-16" src="assets/images/whatsapp.png" alt="whatsapp">
-      </a>
+  <div class="absolute bottom-[10%] ml-[8%]">
+    <p class="italic font-[500] text-4xl text-white">
+      The <span class="text-[#F09517] font-[700]">magic</span> can happen
+    </p>
+    <div class="mb-4">
+      <p class="italic font-[500] text-4xl text-white">
+        in <span class="text-[#F09517] font-[700]">studio.</span>
+      </p>
     </div>
-  </body>
+    <p class="italic font-[500] text-4xl text-white">
+      <span class="text-[#F09517] font-[700]">Special things</span> can happen
+    </p>
+    <p class="italic font-[500] text-4xl text-white">
+      in a <span class="text-[#F09517] font-[700]">recording studio.</span>
+    </p>
+  </div>
+
+  <div class="w-28 h-28 bg-[#F09517] rounded-full absolute bottom-[8%] right-[5%] flex items-center justify-center">
+    <a href="https://api.whatsapp.com/send?phone=085220675360">
+      <img class=" w-16 h-16" src="assets/images/whatsapp.png" alt="whatsapp">
+    </a>
+  </div>
+</body>
+
 </html>
